# name: test_accepts_any_arg_for_bin_file
  <class 'tuple'> (
    Namespace(bin_args=[], bin_file='npm'),
    <class 'list'> [
      '--version',
      '--help',
    ],
  )
---
# name: test_accepts_bin_file_arg
  <class 'tuple'> (
    Namespace(bin_args=[], bin_file='node'),
    <class 'list'> [
    ],
  )
---
# name: test_fails_when_nvm_dir_not_available
  '
  Executing shim version 0.0.0
  Environment variable 'NVM_DIR' missing
  '
---
# name: test_fails_when_version_not_installed
  '
  Executing shim version 0.0.0
  N/A: version 'v14.5.0 -> 14.5.0' is not yet installed.
  
  You need to run 'nvm install 14.5.0' to install it before using it.
  
  Or set the environment variable 'NVSHIM_AUTO_INSTALL' to auto install at run time.
  '
---
# name: test_get_nvm_stable_version_returns_nothing_when_no_version_found
  'Unable to retrieve stable version from nvm'
---
# name: test_run_nvm_command_handles_failure_to_remove_tmp_file
  'Unable to remove temporary nvm shim file'
---
